add share content

--- a/2019/08/2019-08-12.md
+++ b/2019/08/2019-08-12.md
@@ -5,7 +5,7 @@
 
  [Technique](#technique)
 
- [Share](#share)
+ [Share 中文的相关特殊符号的unicode码](#share)
 
 
 # Algorithm
@@ -73,6 +73,13 @@ http://xahlee.info/comp/unicode_full-width_chars.html
 
 
 # Share
+
+https://www.htmlsymbols.xyz/unicode/U+FF10
+
+这个链接里面包含了，常见的中文字符的Unicode码，已经这个码在不同的编程语言里面的表示方式，
+包含html，已经utf-8 ，utf-16 ， utf-32等表示形式，图文并茂非常不错。这个网站的其他的链接
+里面也有一些不错的工具，值得大家收藏。
+
 
 
 
