add technique content

--- a/2019/08/2019-08-12.md
+++ b/2019/08/2019-08-12.md
@@ -3,7 +3,7 @@
 
  [Review 全角的ascii码](#review)
 
- [Technique](#technique)
+ [Technique 备忘一个windows上根据端口杀进程的脚本](#technique)
 
  [Share 中文的相关特殊符号的unicode码](#share)
 
@@ -70,6 +70,13 @@ http://xahlee.info/comp/unicode_full-width_chars.html
 
 
 # Technique
+
+```bash
+1，打开windows上的cmd窗口 
+2，使用netstat -aon | findstr "8983"查看端口所在进程 
+3，然后使用tasklist | findstr "进程id" 找出具体的程序所在主服务 
+4,最后使用taskkill /f /t /im 进程名称 杀死进程 
+```
 
 
 # Share
