--- a/2019/08/2019-08-25.md
+++ b/2019/08/2019-08-25.md
@@ -5,7 +5,7 @@
 
  [Technique](#technique)
 
- [Share](#share)
+ [Share 一个系统学习elasticsearch的官网guide](#share)
 
 
 # Algorithm
@@ -70,6 +70,13 @@ https://www.elastic.co/guide/en/elasticsearch/reference/6.4/dynamic-field-mappin
 
 
 # Share
+
+https://www.elastic.co/guide/en/elasticsearch/guide/master/index.html
+
+这里给大家分享一个学习elasticsearch非常有用的资料，就是我上面发的链接，里面系统的介绍了es的相关功能，
+并有相关优化和原理的地方，相比官网文档对某些概念的解释，这个资料完全可以当做一本书来读，非常不错，但由于
+其在官网文档上的位置并不好找，所以很多了忽略了这么一份无价的资料，这里我直接给出了链接，喜欢的同学可以把
+这个链接加入收藏夹
 
 
 
