add review for 20190831 arts

--- a/2019/08/2019-09-31.md
+++ b/2019/08/2019-09-31.md
@@ -1,7 +1,7 @@
 
  [Algorithm HeightChecker](#algorithm)
 
- [Review](#review)
+ [Review chandy-lamport-snapshot-algorithm](#review)
 
  [Technique](#technique)
 
@@ -59,6 +59,20 @@ public class HeightChecker {
 
 
 # Review
+
+https://en.wikipedia.org/wiki/Chandy%E2%80%93Lamport_algorithm
+
+http://composition.al/blog/2019/04/26/an-example-run-of-the-chandy-lamport-snapshot-algorithm/
+
+https://www.ververica.com/blog/high-throughput-low-latency-and-exactly-once-stream-processing-with-apache-flink
+
+这周看了看关于flink里面checkpoint的实现，发现一种叫chandy lamport的分布式快照算法，于是就是找了找相关的资料，
+上面的几篇文章，都是不错的解释，尤其是最后一篇文章是ververica公司（flink母公司）写的一篇，对比了目前在流式计算系统
+中，所有的相关checkpoint算法，并分析了相关的优缺点。
+
+
+
+
 
 
 # Technique
