add technique for 20190831 arts

--- a/2019/08/2019-09-31.md
+++ b/2019/08/2019-09-31.md
@@ -3,9 +3,9 @@
 
  [Review chandy-lamport-snapshot-algorithm](#review)
 
- [Technique](#technique)
+ [Technique Flink的最佳实践](#technique)
 
- [Share](#share)
+ [Share 关于spark的重分区的策略](#share)
 
 
 # Algorithm
@@ -77,10 +77,16 @@ https://www.ververica.com/blog/high-throughput-low-latency-and-exactly-once-stre
 
 # Technique
 
+https://ci.apache.org/projects/flink/flink-docs-release-1.9/dev/best_practices.html
+
+官网文档，列出的一些关于如何正确优雅的使用flink的经验和实践
+
 
 # Share
 
+repartition： 使用shuffle 来重新分区数据，不管是增加还是减少
 
+coalesce： 减少区分，避免shuffle做个优化
 
 
 
